<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="befit.com.befit.Vistas.Perfil">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:text="@string/titulo_avs"
        />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_avance"
        />

    <EditText
        android:id="@+id/peso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/peso"
        />

    <EditText
        android:id="@+id/estatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/estatura"
        />

    <EditText
        android:id="@+id/edad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edad"
        />

    <Button
        android:id="@+id/guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/colorButtons4"
        android:onClick="guardarDatos"
        android:text="@string/guardar"
        android:textColor="@color/primary_light"
        />

    <Button
        android:id="@+id/leer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButtons4"
        android:textColor="@color/primary_light"
        android:layout_marginBottom="5dp"
        android:onClick="leerDatos"
        android:text="@string/avances"/>
</LinearLayout>
