<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="befit.com.befit.Vistas.NutricionProteina">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:text="@string/titulo_proteina"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:text="@string/titulo_proteinaa"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nutri_peso"/>

    <EditText
        android:id="@+id/idNutriProte_peso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=" "/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nutri_actfisica"/>

    <RadioGroup
        android:id="@+id/idRadioGrupo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/radioSedentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/secondary_text"
        android:text="@string/nutri_af_sedentario"
        android:checked="true"/>

    <RadioButton
        android:id="@+id/radioModerado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/secondary_text"
        android:text="@string/nutri_af_moderado" />

    <RadioButton
        android:id="@+id/radioIntenso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/secondary_text"
        android:text="@string/nutri_af_intenso" />

    </RadioGroup>

    <Button
        android:id="@+id/idNutriProte_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButtons4"
        android:textColor="@color/btn_text4"
        android:text="@string/nutri_calcular"
        android:layout_marginBottom="10dp"
        android:onClick="calcular_proteina"/>

    <TextView
        android:id="@+id/idNutriProte_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/nutri_res_riesgo" />

</LinearLayout>
